# batman

./: .editorconfig  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  example-config.yaml  pyproject.toml  requirements.txt  setup.cfg
api_testing_framework/: __init__.py  cli.py  config.py  docker_integration.py  executor.py  generator.py  parser.py  templates.py  validation.py
api_testing_framework/templates/: basic.bats.j2  crud.bats.j2  docker-compose.yml.j2  error_handling.bats.j2  helpers.bash.j2  test-data.json.j2
docs/: ARCHITECTURE.md
docs/design/: tech-spec.md
helpers/: core.bash
tests/: __init__.py  test_basic.py
