[metadata]
name = batman-api-testing
version = 1.0.0
description = A standalone, configuration-driven API testing framework that generates BATS tests from OpenAPI specifications
long_description = file: README.md
long_description_content_type = text/markdown
author = BATMAN Team
author_email = team@batman-testing.com
url = https://github.com/batman-team/batman-api-testing
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8
install_requires =
    pyyaml>=6.0
    jinja2>=3.1.0
    requests>=2.28.0
    jsonschema>=4.17.0
    click>=8.1.0
    gitpython>=3.1.0

[options.packages.find]
include = api_testing_framework*

[options.entry_points]
console_scripts =
    batman = api_testing_framework.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build,
    dist,
    .mypy_cache,
    .pytest_cache

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
